[package]
name = "rstar-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rstar"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
numpy = "0.16.2"
pyo3 = { version = "0.16.4", features = ["extension-module"] }
rstar = "0.9.3"
